--- a/src/styles.css
+++ b/src/styles.css
@@ -41,13 +41,17 @@ body {
 }
 .hero img {
   width: 100%;
-  height: 30vh;
+  height: 40vh;
+  object-fit: cover;
+  object-position: 15%;
 }
 @media all and (min-width: 600px) {
   .hero {
     margin: 55px 0 0;
   }
   .hero img {
+    object-fit: unset;
+    object-position: unset;
     height: 50vh;
   }
 }
