--- a/src/styles.css
+++ b/src/styles.css
@@ -100,6 +100,9 @@ body {
   margin: var(--p-1);
 }
 @media all and (min-width: 600px) {
+  .side-nav nav{
+    display: block!important;
+  }
   .product-layout .product {
     margin: 0 var(--p-6);
   }
