--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,50 @@
 body {
   background-color: var(--c-grey);
 }
-.cursor-pointer{
+.cursor-pointer {
   cursor: pointer;
 }
-.nav-adjust{
-  margin-top: 90px;
+.nav-adjust {
+  margin-top: 80px;
+}
+.nav-link {
+  position: relative;
+}
+.btn-reset {
+  border: 0;
+  background: transparent;
+}
+.alert {
+  position: fixed;
+  margin: 0 auto;
+  top: 50%;
+  left: 0%;
+  right: 0%;
+  z-index: var(--z-2);
+}
+.auth-form input {
+  height: 40px;
+  margin-bottom: 0.5rem;
+  width: 315px;
+}
+.auth-form .btn-primary {
+  width: 315px;
+  margin: 1rem 0;
+}
+.nav-link .badge {
+  position: absolute;
+  top: -20%;
+  right: -10%;
+  border-radius: 50%;
+  font-size: 0.8rem;
+  color: rgb(255, 255, 255);
+  height: 20px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  background-color: var(--c-primary-200);
 }
 .loader {
   position: absolute;
@@ -52,9 +91,6 @@ body {
   object-position: 15%;
 }
 @media all and (min-width: 600px) {
-  .hero {
-    margin: 55px 0 0;
-  }
   .hero img {
     object-fit: unset;
     object-position: unset;
@@ -103,8 +139,8 @@ body {
   margin: var(--p-1);
 }
 @media all and (min-width: 600px) {
-  .side-menu nav{
-    display: block!important;
+  .side-menu nav {
+    display: block !important;
   }
   .product-layout .product {
     margin: 0 var(--p-6);
