--- a/src/styles.css
+++ b/src/styles.css
@@ -7,9 +7,15 @@ body {
 .nav-link {
   position: relative;
 }
+button {
+  font-family: "Inter";
+}
 .btn-reset {
   border: 0;
   background: transparent;
+}
+.extra-margin {
+  margin-top: 6rem;
 }
 .alert {
   position: fixed;
@@ -38,8 +44,8 @@ body {
 }
 .nav-link .badge {
   position: absolute;
-  top: -20%;
-  right: -10%;
+  top: 25%;
+  left: 45%;
   border-radius: 50%;
   font-size: 0.8rem;
   color: rgb(255, 255, 255);
@@ -55,7 +61,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #fff;
+  background-color: rgba(0, 0, 0, 0.5);
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -111,8 +117,14 @@ body {
     height: 50vh;
   }
   .auth-form {
+    margin-top: 3rem;
     height: 80vh;
     width: 40vw;
+  }
+  .nav-link .badge {
+    left: unset;
+    top: -20%;
+    right: -10%;
   }
 }
 
@@ -296,5 +308,10 @@ body {
 .category-card:hover img {
   background-color: var(--c-success-100);
 }
-
-/*# sourceMappingURL=style.css.map */
+/* profile */
+.user-profile {
+  width: 95vw;
+}
+.user-profile .fsz-2 {
+  margin-left: var(--p-4);
+}
